# catalyst

./: .gitattributes  .gitignore  ANALYSIS_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  DEVELOPMENT_PLAN.md  PROJECT_DESIGN.md  README.md  REPOSITORY_MIGRATION_GUIDE.md  RUST_LESSONS_LEARNED-v1.6-archive.md  RUST_LESSONS_LEARNED.md  START_HERE.md  SVELTE_DOCS_CONTENT_MAP.md  SVELTE_EXTRACTION_QUICK_GUIDE.md  SVELTE_MODULE_BREAKDOWN.md  install.ps1  install.sh  llms.txt
.beads/: beads.left.meta.json
.cargo-husky/: README.md
.cargo-husky/hooks/: pre-commit
.claude/: settings.json
.claude/hooks/: cargo-check-stop.ps1  cargo-check-stop.sh
.claude/hooks/RustHooks/: Cargo-sqlite.toml  Cargo.toml  DATABASES.md  README.md  STANDALONE_INSTALLATION.md  install.sh
.claude/hooks/RustHooks/src/: file_analyzer.rs  post_tool_use_tracker_sqlite.rs  skill_activation_prompt.rs
.claude/skills/rust-developer/: SKILL.md  rust-patterns.md
.github/workflows/: ci.yml
catalyst-cli/: Cargo.toml
catalyst-cli/resources/: wrapper-template.ps1  wrapper-template.sh
catalyst-cli/src/: init.rs  lib.rs  status.rs  types.rs  update.rs  validation.rs
catalyst-core/: Cargo.toml
catalyst-core/src/: lib.rs  settings.rs
dev/active/ai-skill-activation-system/: ai-skill-activation-system-context.md  ai-skill-activation-system-plan.md  ai-skill-activation-system-tasks.md
dev/active/catalyst-cli/: CRITICAL-FIXES-SUMMARY.md  catalyst-cli-algorithms.md  catalyst-cli-context.md  catalyst-cli-cross-platform.md  catalyst-cli-data-structures.md  catalyst-cli-dependencies.md  catalyst-cli-helpers.md  catalyst-cli-json-schemas.md  catalyst-cli-plan.md  catalyst-cli-tasks.md
docs/: amazon-q-compatibility.md  building-hooks-guide.md  cargo-check-hook.md  catalyst-cli-implementation-plan.md  powershell-lessons.md  standalone-installation.md
docs/rust-lessons/: index.md  quick-reference.md  type-safety-deep-dive.md
docs/schemas/: .catalyst-hashes.json.example  settings-windows.json.example  settings.json.example  skill-rules.json.example
