[workspace]
members = [
    "catalyst-core",
    "catalyst-cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Contributors"]
license = "MIT"
repository = "https://github.com/dwalleck/catalyst"

[workspace.dependencies]
# Shared dependencies available to all workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
once_cell = "1.19"
walkdir = "2.4"

# Performance optimizations (Phase 2.5)
ignore = "0.4"              # .gitignore support (respects .gitignore files)
globset = "0.4"             # Efficient glob pattern matching
unicase = "2.7"             # Zero-allocation case-insensitive comparison
rayon = "1.8"               # Parallel processing (optional feature)
aho-corasick = "1.1"        # Multi-pattern string matching (optional feature)

# SQLite (optional feature)
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"

[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization (slower compile)
strip = true         # Remove debug symbols
