[workspace]
members = [
    "catalyst-core",
    "catalyst-cli",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Catalyst Contributors"]
license = "MIT"
repository = "https://github.com/dwalleck/catalyst"
homepage = "https://github.com/dwalleck/catalyst"
documentation = "https://docs.rs/catalyst"
readme = "README.md"
keywords = ["claude-code", "hooks", "automation", "ai", "productivity"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Shared dependencies available to all workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"                 # TOML parsing for Cargo.toml detection
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"            # Custom error types (Phase 3.2)
once_cell = "1.19"
walkdir = "2.4"

# CLI improvements (Phase 2.4)
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"

# Performance optimizations (Phase 2.5)
ignore = "0.4"              # .gitignore support (respects .gitignore files)
globset = "0.4"             # Efficient glob pattern matching
unicase = "2.7"             # Zero-allocation case-insensitive comparison
rayon = "1.8"               # Parallel processing (optional feature)
aho-corasick = "1.1"        # Multi-pattern string matching (optional feature)

# SQLite (optional feature)
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"

# Catalyst CLI dependencies (Phase 1)
sha2 = "0.10"                   # SHA256 hashing for skill change detection
dialoguer = "0.11"              # Interactive prompts
indicatif = "0.17"              # Progress bars
include_dir = "0.7"             # Embed skills at compile time
dirs = "5.0"                    # Cross-platform home directory
dunce = "1.0"                   # Canonicalize paths (Windows UNC fix)
tempfile = "3.14"               # Atomic file writes

# Pre-commit hooks (installs automatically on cargo build)
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization (slower compile)
strip = true         # Remove debug symbols
