[package]
name = "catalyst-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line tools for Catalyst - hooks and utilities"

[dependencies]
# Import core library (will be used in Phase 2.6 for settings management)
# Currently not used by binaries, but included to establish dependency for future use
catalyst-core = { version = "0.1.0", path = "../catalyst-core" }

# CLI-specific dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
walkdir = { workspace = true }

# CLI improvements (Phase 2.4)
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }

# Performance optimizations (Phase 2.5)
ignore = { workspace = true }
globset = { workspace = true }
unicase = { workspace = true }

# Optional performance features
rayon = { workspace = true, optional = true }
aho-corasick = { workspace = true, optional = true }

# SQLite feature dependencies
rusqlite = { workspace = true, optional = true }
chrono = { workspace = true }

# Phase 1 dependencies for catalyst CLI
sha2 = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
include_dir = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
tempfile = { workspace = true }

# Windows-specific dependencies for process checking
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
# Pre-commit hooks (installs automatically on cargo build)
cargo-husky = { workspace = true }

[features]
default = []
sqlite = ["dep:rusqlite"]
# Reserved for future performance enhancements
# parallel - Will enable parallel file processing with rayon
# fast-patterns - Will enable multi-pattern string matching with aho-corasick
parallel = ["dep:rayon"]
fast-patterns = ["dep:aho-corasick"]

# Binary definitions
[[bin]]
name = "skill-activation-prompt"
path = "src/bin/skill_activation_prompt.rs"

[[bin]]
name = "file-analyzer"
path = "src/bin/file_analyzer.rs"

[[bin]]
name = "file-change-tracker"
path = "src/bin/file_change_tracker.rs"
required-features = ["sqlite"]

# Unified Catalyst CLI tool (renamed from settings-manager in Phase 1)
[[bin]]
name = "catalyst"
path = "src/bin/catalyst.rs"

# Cargo check hook - runs cargo check on Rust file edits
[[bin]]
name = "cargo-check"
path = "src/bin/cargo_check.rs"
