[package]
name = "catalyst-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for Catalyst - shared utilities and settings management"

[dependencies]
# Phase 2.6: Settings management
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tempfile = "3.8"  # Required for atomic file writes (NamedTempFile in production code)
strsim = "0.11"   # String similarity for "did you mean" suggestions
