[package]
name = "rust-hooks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skill-activation-prompt"
path = "src/skill_activation_prompt.rs"

[[bin]]
name = "file-analyzer"
path = "src/file_analyzer.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
